# balancing-rover

./: .gitignore  requirements.txt
client-app/src/python/: balancing_telemetry.py  graph_component.py  number_input.py
rover/: .gitignore  Cargo.toml  upload-balance.sh
rover/dma_gpio/: Cargo.toml.orig
rover/dma_gpio/aarch64/: Cargo.toml  README.md
rover/dma_gpio/aarch64/src/: lib.rs
rover/dma_gpio/aarch64/src/mailbox/: mod.rs
rover/dma_gpio/aarch64/src/pi/: mod.rs
rover/dma_gpio/armhf/: Cargo.toml  LICENSE
rover/dma_gpio/armhf/src/: pi_core.rs
rover/dma_gpio/armhf/src/mailbox/: mod.rs
rover/dma_gpio/armhf/src/pi/: mod.rs
rover/dma_gpio/src/mailbox/: ioctl.rs  mod.rs
rover/dma_gpio/src/pi/: mod.rs
rover/src/python/balance/: accel.py  balance_main.py  balancing.py  gyro.py  pid.py  pigpio_motors.py  rpi_gpio_motors.py
rover/src/rust/: .gitignore  accel.rs  as5600.rs  balance.rs  gyro.rs  main.rs  motors.rs  pid.rs  telemetry_socket_server.rs  telemetry_stream.rs
