[package]
name = "balancing-rover"
version = "0.1.0"
authors = ["Daniel Sendla"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "balancing-rover"
path = "src/rust/main.rs"

#[lib]
#path = "src/rust"


[dependencies]
rand = "0.5.5"
im = "15.0.0"
# derive-new = "0.5"
# crossbeam = "0.6.0"
byteorder = "1.3.4"
rppal = "0.11.3"
phf = { version = "0.8.0", features = ["macros"] }


[target.'cfg(target_arch = "aarch64")'.dependencies]
dma_gpio_aarch64 = { path = "dma_gpio/aarch64", package="dma_gpio" }

[target.'cfg(target_arch = "arm")'.dependencies]
dma_gpio_armhf = { path = "dma_gpio/armhf", package="dma_gpio" }
