[package]
name = "balancing-rover"
version = "0.1.0"
authors = ["Daniel Sendla"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "balancing-rover"
path = "src/rust/main.rs"

#[lib]
#path = "src/rust"


[dependencies]
byteorder = "1.3.4"
phf = { version = "0.8.0", features = ["macros"] }
ctrlc = "3.1.4"
rppal = "0.11.3"
rumqtt = "0.31.0"
mqtt311 = "0.2"
crossbeam-channel = "^0.3"

dma_gpio = { path = "dma_gpio" }
